--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: dactyl_manuform_6x7_left
+    shield: dactyl_6x7_left
   - board: nice_nano_v2
-    shield: dactyl_manuform_6x7_right
+    shield: dactyl_6x7_right
   - board: nice_nano_v2
     shield: settings_reset
