--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,10 @@ include:
     shield: dactyl_6x7_right
   - board: nice_nano_v2
     shield: settings_reset
+
+name: Build ZMK firmware
+on: [push, pull_request, workflow_dispatch]
+
+jobs:
+  build:
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@v0.3
