--- a/build.yaml
+++ b/build.yaml
@@ -13,15 +13,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: dactyl_6x7_left
+    shield: dactyl_manuform_6x7_left
   - board: nice_nano_v2
-    shield: dactyl_6x7_right
+    shield: dactyl_manuform_6x7_right
   - board: nice_nano_v2
     shield: settings_reset
-
-name: Build ZMK firmware
-on: [push, pull_request, workflow_dispatch]
-
-jobs:
-  build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@v0.3
