--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,8 @@
 ---
 include:
   - board: nice_nano
-    shield: dactyl_manuform_5x6_left
+    shield: dactylccplus_6x7_left
   - board: nice_nano
-    shield: dactyl_manuform_5x6_right
+    shield: dactylссplus_6x7_right
   - board: nice_nano
     shield: settings_reset
