--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,6 @@ include:
   - board: nice_nano
     shield: dactylccplus_6x7_left
   - board: nice_nano
-    shield: dactylссplus_6x7_right
+    shield: dactylccplus_6x7_right
   - board: nice_nano
     shield: settings_reset
