--- a/config/boards/shields/dactylccplus_6x7/dactylccplus_6x7.dtsi
+++ b/config/boards/shields/dactylccplus_6x7/dactylccplus_6x7.dtsi
@@ -34,7 +34,7 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(3,6)                         
         compatible = "zmk,kscan-gpio-matrix";
         label = "KSCAN";
 
-        diode-direction = "col2row";
+        diode-direction = "row2col";//было col2row
         row-gpios	// должны быть горизонтальные ряды, row, их 6
             = <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> 	//19
             , <&pro_micro 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>	//18
