--- a/build.yaml
+++ b/build.yaml
@@ -18,6 +18,5 @@ include:
     shield: dactylccplus_6x7_right
   - board: nice_nano
     shield: settings_reset
-
-studio-rpc-usb-uart
-CONFIG_ZMK_STUDIO=y
+snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
